
    - Made rev-upgrade avoid trying to upgrade ports that are not in the index
      (jmr in r93197)

    - Fixed rev-upgrade disabling source-only mode in its first upgrade pass
      (jmr in r93153)

    - Fixed incorrect rebuild order in rev-upgrade (cal in r93129)

    - Fixed port lookups failing for all sources when the index is missing in
      one source (#30593, jmr in r92976)

Release 2.1.0 (2012-05-15 by jmr):
    - New configure.compiler options: macports-clang-2.9, macports-clang-3.0,
      macports-clang-3.1, macports-gcc-4.7, macports-gcc-4.8
      (jeremyhu in r86719, ryandesign in r91521)

    - Avoid using pkg-config to find sqlite3 in our configure script unless it
      can't be found by other means, because some third-party packages
      incorrectly install a /usr/bin/pkg-config that points to an incompatible
      copy of sqlite3. (#30932, dluke/jmr in r91512)

    - 'port pkg' and 'port mpkg' will now create flat packages (i.e. a xar
      archive rather than a directory) on 10.6+.
      (jmr in r91317, r91329, r91331, r91437)

    - Fixed dependencies sometimes being installed multiple times when
      required with different archs. (#31794, jmr in r91357)

    - Build-time dependencies will no longer be installed if a prebuilt
      archive is available for download (and port is configured to use it).
      (jmr in r91196, r91217)

    - Added new config file archive_sites.conf, which can be used to configure
      additional archive download sources. Each source has an associated
      archive type; portarchivetype is now only used when creating archives
      locally. Sources also have an associated prefix, applications_dir and
      frameworks_dir, and if any of these do not match the current values, the
      source is not used. (jmr in r91009)

    - Xcode 4.3 support: Search harder for developer directory; advise user to
      run xcode-select when necessary, searching for Xcode and suggesting
      xcode-select commands.